--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>🛠️ Admin Dashboard</title>
 
-<!-- ====== LIBRARIES ====== -->
+<!-- LIB -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -16,19 +16,13 @@
 
 <h1 class="text-2xl font-bold text-center">🛠️ Admin Dashboard</h1>
 
-<!-- =================================================
-SUPABASE CONNECTION (หัวใจของระบบ)
-================================================= -->
+<!-- ================= SUPABASE CONNECT ================= -->
 <script>
-/* 🔑 CONFIG */
 const SUPABASE_URL = "https://nvsptbbvxjulrpdebrhn.supabase.co";
 const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss";
 
-/* 🔥 CONNECT */
 const db = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-
-/* 🔍 QUICK CHECK (ดูใน console) */
-console.log('Supabase connected:', db);
+console.log('Supabase connected', db);
 </script>
 
 <!-- ================= TOAST ================= -->
@@ -43,286 +37,175 @@ const Toast = Swal.mixin({
 });
 </script>
 
-<!-- =================================================
-BLOCK: หมวดสินค้า
-================================================= -->
-<section class="bg-slate-800 p-4 rounded-xl space-y-3">
-  <h2 class="font-bold text-lg">🗂️ หมวดสินค้า</h2>
-
-  <div class="flex gap-2">
-    <input id="catName" class="flex-1 p-2 text-black rounded" placeholder="ชื่อหมวดใหม่">
-    <button onclick="addCategory()" class="bg-emerald-600 px-4 rounded">เพิ่ม</button>
-  </div>
-
-  <div id="categoryList" class="grid grid-cols-1 md:grid-cols-3 gap-2"></div>
-</section>
-
-<!-- =================================================
-BLOCK: เมนู
-================================================= -->
-<section class="bg-slate-800 p-4 rounded-xl space-y-3">
-  <h2 class="font-bold text-lg">🍜 เมนู</h2>
-
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-2">
-    <input id="pName" class="p-2 text-black rounded" placeholder="ชื่อเมนู">
-    <select id="pCategory" class="p-2 text-black rounded"></select>
-    <input id="pPrice" type="number" class="p-2 text-black rounded" placeholder="ราคา">
-  </div>
-
-  <button onclick="addProduct()" class="bg-emerald-600 px-4 py-2 rounded">
-    ➕ เพิ่มเมนู
-  </button>
-
-  <table class="w-full text-sm">
-    <thead>
-      <tr class="border-b border-slate-600">
-        <th>ชื่อ</th>
-        <th>ราคา</th>
-        <th>ขาย</th>
-        <th>ลบ</th>
-      </tr>
-    </thead>
-    <tbody id="productList"></tbody>
-  </table>
-</section>
-
-<!-- =================================================
-BLOCK: โต๊ะ
-================================================= -->
-<section class="bg-slate-800 p-4 rounded-xl space-y-3">
-  <h2 class="font-bold text-lg">🪑 โต๊ะ</h2>
-
-  <div class="flex gap-2">
-    <input id="tName" class="flex-1 p-2 text-black rounded" placeholder="ชื่อโต๊ะ">
-    <button onclick="addTable()" class="bg-emerald-600 px-4 rounded">เพิ่มโต๊ะ</button>
-  </div>
-
-  <div id="tableList" class="space-y-1 text-sm"></div>
-</section>
-
-<!-- =================================================
-BLOCK: บิลรายวัน
-================================================= -->
+<!-- ================= BILLS ================= -->
 <section class="bg-slate-800 p-4 rounded-xl space-y-3">
   <h2 class="font-bold text-lg">🧾 บิลรายวัน</h2>
 
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
-    <input type="date" id="billDate" class="p-2 text-black rounded" onchange="loadBillsByDate()">
-    <select id="billTableFilter" class="p-2 text-black rounded" onchange="loadBillsByDate()">
-      <option value="">ทุกโต๊ะ</option>
-    </select>
+  <input type="date" id="billDate"
+    class="p-2 text-black rounded"
+    onchange="loadBillsByDate()">
+
+  <div class="font-bold">
+    รวมทั้งวัน:
+    <span id="dailyTotal" class="text-emerald-400">0</span> บาท
   </div>
 
-  <div class="flex justify-between">
-    <div class="font-bold">
-      รวมทั้งวัน: <span id="dailyTotal" class="text-emerald-400">0</span> บาท
-    </div>
-    <button onclick="exportDailyExcel()" class="bg-emerald-600 px-3 py-1 rounded">
-      📤 Export Excel
-    </button>
-  </div>
+  <button onclick="exportDailyExcel()"
+    class="bg-emerald-600 px-3 py-1 rounded">
+    📤 Export Excel
+  </button>
 
   <div id="billList" class="space-y-2 text-sm"></div>
 </section>
 
-<!-- =================================================
-BLOCK: Dashboard
-================================================= -->
+<!-- ================= DASHBOARD ================= -->
 <section class="bg-slate-800 p-4 rounded-xl space-y-4">
-  <h2 class="font-bold text-lg">📊 Dashboard</h2>
+  <h2 class="font-bold text-lg">📊 กราฟยอดขายรายวัน</h2>
   <canvas id="salesChart" height="120"></canvas>
-
-  <div>
-    <h3 class="font-bold">🧾 ยอดขายแยกตามหมวด</h3>
-    <div id="categorySummary" class="text-sm space-y-1"></div>
-  </div>
 </section>
 
-<!-- =================================================
-JAVASCRIPT LOGIC
-================================================= -->
+<!-- ================= LOGIC ================= -->
 <script>
-/* ====== TIME (THAI) ====== */
+/* ===== TIME (TH) ===== */
 function getThaiDayRange(dateStr){
-  const s = new Date(dateStr+'T00:00:00+07:00');
-  const e = new Date(dateStr+'T23:59:59+07:00');
-  return { start:s.toISOString(), end:e.toISOString() };
+  const s = new Date(dateStr + 'T00:00:00+07:00');
+  const e = new Date(dateStr + 'T23:59:59+07:00');
+  return { start: s.toISOString(), end: e.toISOString() };
 }
 
-/* ====== CATEGORY ====== */
-async function loadCategories(){
-  const {data} = await db.from('categories').select('*').order('name');
-  categoryList.innerHTML=''; pCategory.innerHTML='';
-  data.forEach(c=>{
-    categoryList.innerHTML+=`
-      <div class="bg-slate-700 p-2 rounded flex justify-between">
-        <span>${c.name}</span>
-        <span>
-          <button onclick="deleteCategory('${c.id}','${c.name}')">🗑</button>
-        </span>
-      </div>`;
-    pCategory.innerHTML+=`<option>${c.name}</option>`;
-  });
-}
-async function addCategory(){
-  if(!catName.value) return;
-  await db.from('categories').insert({name:catName.value});
-  catName.value='';
-  Toast.fire({icon:'success',title:'เพิ่มหมวดแล้ว'});
-  loadCategories();
-}
-async function deleteCategory(id,name){
-  const {data}=await db.from('products').select('id').eq('category',name).limit(1);
-  if(data.length){
-    Swal.fire('ลบไม่ได้','ยังมีเมนูใช้หมวดนี้','warning');
+/* ===== LOAD BILLS (FIX 400) ===== */
+async function loadBillsByDate(){
+  const d = billDate.value;
+  if(!d) return;
+
+  const { start, end } = getThaiDayRange(d);
+
+  const { data: orders, error } = await db
+    .from('orders')
+    .select(`
+      id,
+      total,
+      payment,
+      created_at,
+      order_items!order_items_order_id_fkey (
+        product_name,
+        qty,
+        price
+      )
+    `)
+    .eq('status','paid')
+    .gte('created_at', start)
+    .lte('created_at', end)
+    .order('created_at', { ascending:false });
+
+  if(error){
+    console.error(error);
+    Swal.fire({
+      icon:'error',
+      title:'โหลดบิลไม่สำเร็จ',
+      text:error.message
+    });
     return;
   }
-  await db.from('categories').delete().eq('id',id);
-  loadCategories();
-}
 
-/* ====== PRODUCTS ====== */
-async function loadProducts(){
-  const {data}=await db.from('products').select('*').order('category');
-  productList.innerHTML='';
-  data.forEach(p=>{
-    productList.innerHTML+=`
-      <tr>
-        <td>${p.name}</td>
-        <td><input type="number" value="${p.price}"
-          onchange="db.from('products').update({price:this.value}).eq('id','${p.id}')"></td>
-        <td><input type="checkbox" ${p.active?'checked':''}
-          onchange="db.from('products').update({active:this.checked}).eq('id','${p.id}')"></td>
-        <td><button onclick="db.from('products').delete().eq('id','${p.id}');loadProducts()">ลบ</button></td>
-      </tr>`;
-  });
-}
-async function addProduct(){
-  if(!pName.value||!pPrice.value) return;
-  await db.from('products').insert({
-    name:pName.value,category:pCategory.value,
-    price:Number(pPrice.value),active:true
-  });
-  pName.value=pPrice.value='';
-  loadProducts();
-}
+  billList.innerHTML = '';
+  let sum = 0;
 
-/* ====== TABLE ====== */
-async function loadTables(){
-  const {data}=await db.from('tables').select('*').order('name');
-  tableList.innerHTML='';
-  billTableFilter.innerHTML='<option value="">ทุกโต๊ะ</option>';
-  data.forEach(t=>{
-    tableList.innerHTML+=`
-      <div class="flex justify-between">
-        <span>${t.name}</span>
-        <span>
-          <input type="checkbox" ${t.active?'checked':''}
-            onchange="db.from('tables').update({active:this.checked}).eq('id','${t.id}')">
-        </span>
-      </div>`;
-    billTableFilter.innerHTML+=`<option value="${t.id}">${t.name}</option>`;
-  });
-}
-async function addTable(){
-  if(!tName.value) return;
-  await db.from('tables').insert({name:tName.value,active:true});
-  tName.value='';
-  loadTables();
-}
-
-/* ====== BILLS ====== */
-let productCategoryMap={};
-async function buildProductCategoryMap(){
-  const {data}=await db.from('products').select('name,category');
-  data.forEach(p=>productCategoryMap[p.name]=p.category);
-}
-
-async function loadBillsByDate(){
-  const d=billDate.value; if(!d) return;
-  const {start,end}=getThaiDayRange(d);
-
-  const {data:orders,error}=await db.from('orders')
-    .select(`id,total,payment,created_at,order_items(product_name,qty,price)`)
-    .eq('status','paid')
-    .gte('created_at',start)
-    .lte('created_at',end)
-    .order('created_at',{ascending:false});
-
-  if(error){ Swal.fire(error.message); return; }
-
-  billList.innerHTML=''; let sum=0;
   orders.forEach(o=>{
-    sum+=o.total;
-    billList.innerHTML+=`
-      <div class="border p-2">
-        <b>${o.total} บาท</b>
-        ${o.order_items.map(i=>`<div>- ${i.product_name} × ${i.qty}</div>`).join('')}
-      </div>`;
+    sum += o.total;
+
+    billList.innerHTML += `
+      <div class="border border-slate-600 p-2 rounded">
+        <div class="flex justify-between font-bold">
+          <span>
+            ${new Date(o.created_at)
+              .toLocaleTimeString('th-TH',{hour:'2-digit',minute:'2-digit'})}
+          </span>
+          <span>${o.total} บาท</span>
+        </div>
+
+        ${o.order_items.map(i =>
+          `<div>- ${i.product_name} × ${i.qty}</div>`
+        ).join('')}
+      </div>
+    `;
   });
-  dailyTotal.innerText=sum;
+
+  dailyTotal.innerText = sum;
   drawChart(orders);
-  drawCategory(orders);
 }
 
-/* ====== EXPORT ====== */
+/* ===== EXPORT ===== */
 async function exportDailyExcel(){
-  const d=billDate.value; if(!d) return;
-  const {start,end}=getThaiDayRange(d);
+  const d = billDate.value;
+  if(!d) return;
 
-  const {data:orders}=await db.from('orders')
-    .select(`created_at,order_items(product_name,qty,price)`)
+  const { start, end } = getThaiDayRange(d);
+
+  const { data: orders, error } = await db
+    .from('orders')
+    .select(`
+      created_at,
+      order_items!order_items_order_id_fkey (
+        product_name,
+        qty,
+        price
+      )
+    `)
     .eq('status','paid')
-    .gte('created_at',start)
-    .lte('created_at',end);
+    .gte('created_at', start)
+    .lte('created_at', end);
 
-  let rows=[['สินค้า','จำนวน','รวม']];
+  if(error){
+    Swal.fire({ icon:'error', title:error.message });
+    return;
+  }
+
+  let rows = [['เวลา','สินค้า','จำนวน','รวม']];
   orders.forEach(o=>{
     o.order_items.forEach(i=>{
-      rows.push([i.product_name,i.qty,i.qty*i.price]);
+      rows.push([
+        new Date(o.created_at)
+          .toLocaleTimeString('th-TH',{hour:'2-digit',minute:'2-digit'}),
+        i.product_name,
+        i.qty,
+        i.qty * i.price
+      ]);
     });
   });
-  const csv=rows.map(r=>r.join(',')).join('\n');
-  const a=document.createElement('a');
-  a.href=URL.createObjectURL(new Blob([csv],{type:'text/csv'}));
-  a.download=`ยอดขาย_${d}.csv`;
+
+  const csv = rows.map(r=>r.join(',')).join('\n');
+  const blob = new Blob([csv],{type:'text/csv;charset=utf-8;'});
+  const a = document.createElement('a');
+  a.href = URL.createObjectURL(blob);
+  a.download = `ยอดขาย_${d}.csv`;
   a.click();
 }
 
-/* ====== DASHBOARD ====== */
+/* ===== CHART ===== */
 function drawChart(orders){
-  const hours=[...Array(24).keys()];
-  const totals=hours.map(h=>
-    orders.filter(o=>new Date(o.created_at).getHours()===h)
-          .reduce((s,o)=>s+o.total,0)
+  const hours = [...Array(24).keys()];
+  const totals = hours.map(h =>
+    orders
+      .filter(o => new Date(o.created_at).getHours() === h)
+      .reduce((s,o)=>s+o.total,0)
   );
-  if(window.chart) window.chart.destroy();
-  window.chart=new Chart(document.getElementById('salesChart'),{
-    type:'bar',
-    data:{labels:hours.map(h=>`${h}:00`),
-    datasets:[{label:'ยอดขาย',data:totals}]}
-  });
-}
-function drawCategory(orders){
-  const sum={};
-  orders.forEach(o=>{
-    o.order_items.forEach(i=>{
-      const c=productCategoryMap[i.product_name]||'อื่นๆ';
-      sum[c]=(sum[c]||0)+i.qty*i.price;
-    });
-  });
-  categorySummary.innerHTML='';
-  Object.entries(sum).forEach(([c,v])=>{
-    categorySummary.innerHTML+=`<div>${c} : ${v} บาท</div>`;
-  });
+
+  if(window.salesChart) window.salesChart.destroy();
+  window.salesChart = new Chart(
+    document.getElementById('salesChart'),
+    {
+      type:'bar',
+      data:{
+        labels:hours.map(h=>`${h}:00`),
+        datasets:[{label:'ยอดขาย (บาท)',data:totals}]
+      }
+    }
+  );
 }
 
-/* ====== INIT ====== */
-loadCategories();
-loadProducts();
-loadTables();
-buildProductCategoryMap();
-billDate.value=new Date().toISOString().split('T')[0];
+/* ===== INIT ===== */
+billDate.value = new Date().toISOString().split('T')[0];
 loadBillsByDate();
 </script>
 
